# mc-forecasting

./: .gitignore  README.md  data_loader.py  data_utils.py  estimator.py  evaluation_utils.py  fetch_data.ipynb  forecast_engine.py  plots.ipynb  pyproject.toml  tables.ipynb
analysis/: Analysis.ipynb  plots.ipynb
data/: data_cleaning.ipynb  data_joining.ipynb  fetch_entsoe_data.ipynb  fetch_futures.ipynb  flow_visualization.ipynb  update_entsoe_data.py
models/: LEAR_panel.py  elastic_net_regression.py  lasso_panel.py  lear_panel.py  lear_univariate.py  mcnnm.py  mcnnm_32.py  mcnnm_estimator.py  mcnnm_tsr.py  nbeatsx.py  simple_regression.py
results/: ElasticNet-112_results.parquet  ElasticNet-56_results.parquet  ElasticNet-84_results.parquet  ElasticNet_results_first_run.parquet  LASSO-112_results.parquet  LASSO-56_results.parquet  LASSO-84_results.parquet  LEAR-112_results.parquet  LEAR-56_results.parquet  LEAR-84_results.parquet  LEAR-Panel-112_results.parquet  LEAR-Panel-56_results.parquet  LEAR-Panel-84_results.parquet  MCNNM-112_32_results.parquet  MCNNM-32-84_results.parquet  MCNNM-56_32_results.parquet  MCNNM-TSR-112_results.parquet  MCNNM-TSR-56_results.parquet  MCNNM-TSR-84_results.parquet  MCNNM_64_56_results.parquet  scaled_LASSO-84_results.parquet
testing/: test_elastic_net.py
training/: Baseline_run.py  Baseline_run_linear.py  Baseline_run_mc.py  test_LEAR_panel.py  test_elastic_net.py  test_forecast_engine.ipynb  test_forecast_engine_no_opt.ipynb  test_forecast_engine_with_opt.ipynb  test_lasso_panel.py  test_lear_panel.py  test_mcnnm.py  train_elasticnet.py  train_lasso.py  (+24 more)
(+578 files in other folders)
