[tool.poetry]
name = "mc-forecasting"
package-mode = false
authors = ["Tobias Schnabel <ctobiasschnabel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
entsoe-py = "^0.6.8"
jao-py = "^0.4.7"
tqdm = "^4.66.4"
pandas = "^2.2.2"
numpy = "^2.0.1"
jupyter = "^1.0.0"
retrying = "^1.3.4"
pyarrow = "^17.0.0"
seaborn = "^0.13.2"
yfinance = "^0.2.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
