[tool.poetry]
name = "mc-forecasting"
package-mode = false
authors = ["Tobias Schnabel <ctobiasschnabel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
entsoe-py = "^0.6.8"
jao-py = "^0.4.7"
tqdm = "^4.66.4"
pandas = "^2.2.2"
numpy = "^2.0.1"
jupyter = "^1.0.0"
retrying = "^1.3.4"
pyarrow = "^17.0.0"
seaborn = "^0.13.2"
yfinance = "^0.2.41"
scikit-learn = "^1.5.1"
torch = "^2.4.0"
lightweight-mcnnm = "*"
aquarel = "^0.0.6"
pylatex = "^1.4.2"
pyfixest = "^0.23.0"
statsmodels = "^0.14.2"
mlforecast = "^0.13.3"
statsforecast = "^1.7.6"
optuna = "^3.6.1"
sqlalchemy = "^2.0.32"
black = "^24.8.0"
joblib = "^1.4.2"
lightning = "^2.4.0"
neuralforecast = "^1.7.4"


[tool.poetry.group.visualization.dependencies]
geopandas = "^1.0.1"
matplotlib = "^3.9.2"
shapely = "^2.0.5"
contextily = "^1.6.1"
geodatasets = "^2024.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
